{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 117,
  "lineage": "5127f942-9a3f-b106-b58f-a880120e9637",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:network-acl/acl-0441f859b4146b0d1",
            "default_network_acl_id": "acl-0441f859b4146b0d1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0441f859b4146b0d1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "648378716943",
            "subnet_ids": [
              "subnet-04151437f6e94183f"
            ],
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            },
            "vpc_id": "vpc-09af76aa76113ce08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:route-table/rtb-004f40d78a46af017",
            "default_route_table_id": "rtb-004f40d78a46af017",
            "id": "rtb-004f40d78a46af017",
            "owner_id": "648378716943",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e4f6e3916ea2994",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            },
            "timeouts": null,
            "vpc_id": "vpc-09af76aa76113ce08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:security-group/sg-0db0a9756c2a4917f",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db0a9756c2a4917f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "owner_id": "648378716943",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            },
            "vpc_id": "vpc-09af76aa76113ce08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd8aaed79e5a18ae",
            "association_id": "eipassoc-0f45fb6aecbaa0521",
            "domain": "vpc",
            "id": "eipalloc-0bd8aaed79e5a18ae",
            "instance": "i-0639f011bd7853e39",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0a6e6be56eb66cce1",
            "private_dns": "ip-10-0-1-91.eu-west-2.compute.internal",
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-18-135-251-58.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.251.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_security_group.example",
            "aws_instance.example",
            "aws_key_pair.example",
            "aws_network_interface.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e88be9ecff64781",
            "arn": "arn:aws:ec2:eu-west-2:648378716943:instance/i-0639f011bd7853e39",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0639f011bd7853e39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0a6e6be56eb66cce1"
              }
            ],
            "primary_network_interface_id": "eni-0a6e6be56eb66cce1",
            "private_dns": "ip-10-0-1-91.eu-west-2.compute.internal",
            "private_ip": "10.0.1.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08cbddf70117f4c5f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04151437f6e94183f",
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db0a9756c2a4917f"
            ]
          },
          "dependencies": [
            "aws_default_security_group.example",
            "aws_key_pair.example",
            "aws_network_interface.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:internet-gateway/igw-01e4f6e3916ea2994",
            "id": "igw-01e4f6e3916ea2994",
            "owner_id": "648378716943",
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            },
            "vpc_id": "vpc-09af76aa76113ce08"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:network-interface/eni-0a6e6be56eb66cce1",
            "id": "eni-0a6e6be56eb66cce1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:7d:78:82:85:94",
            "owner_id": "648378716943",
            "private_ip": "10.0.1.91",
            "private_ip_list": [
              "10.0.1.91"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.91"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0db0a9756c2a4917f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04151437f6e94183f",
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            }
          },
          "dependencies": [
            "aws_default_security_group.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d23dbccbfbb36a31",
            "route_table_id": "rtb-004f40d78a46af017",
            "subnet_id": "subnet-04151437f6e94183f"
          },
          "dependencies": [
            "aws_default_route_table.example",
            "aws_internet_gateway.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:subnet/subnet-04151437f6e94183f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04151437f6e94183f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "648378716943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            },
            "vpc_id": "vpc-09af76aa76113ce08"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:vpc/vpc-09af76aa76113ce08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0441f859b4146b0d1",
            "default_route_table_id": "rtb-004f40d78a46af017",
            "default_security_group_id": "sg-0db0a9756c2a4917f",
            "dhcp_options_id": "dopt-01d89632e30573af2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09af76aa76113ce08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004f40d78a46af017",
            "owner_id": "648378716943",
            "tags": {
              "name": "learning"
            },
            "tags_all": {
              "name": "learning"
            }
          }
        }
      ]
    }
  ]
}